bar-overflow-fixed

--- a/src/app/Components/Stats/Components/statistics/statistics.scss
+++ b/src/app/Components/Stats/Components/statistics/statistics.scss
@@ -80,6 +80,7 @@
         font-family: "Inria Sans", sans-serif;
         font-weight: 500;
         font-style: normal;
+        overflow: hidden;
         #number {
           font-size: 2.8vw;
         }
